# HISSTools_Library

./: .clang-format  .gitignore  Allocator.hpp  CMakeLists.txt  Interpolation.hpp  KernelSmoother.hpp  LICENSE  MemorySwap.hpp  PartialTracker.hpp  PeakTracker.hpp  README.md  RandomGenerator.hpp  Resampler.hpp  SIMDSupport.hpp  SpectralFunctions.hpp  SpectralProcessor.hpp  Statistics.hpp  TableReader.hpp  WindowFunctions.hpp  run_clang_format.sh
- Test/: audio_file_test.cpp  convolution_test.cpp  fft_test.cpp  ir_manipulation_test.cpp  window_test.cpp
- Test/Audio_File_Tester/Audio_File_Tester/: main.cpp
- Test/Audio_File_Tester/Audio_File_Tester.xcodeproj/: project.pbxproj
- Test/Audio_File_Tester/Audio_File_Tester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
- Test/Convolution_Tester/Convolution_Tester/: conv_tester_config.xcconfig  main.cpp
- Test/Convolution_Tester/Convolution_Tester.xcodeproj/: project.pbxproj
- Test/Convolution_Tester/Convolution_Tester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
- Test/FFT Tester/FFT Tester/: main.cpp
- Test/FFT Tester/FFT Tester.xcodeproj/: project.pbxproj
- Test/FFT_Tester/FFT_Tester/: fft_test.cpp  main.cpp
- Test/FFT_Tester/FFT_Tester.xcodeproj/: project.pbxproj
- Test/FFT_Tester/FFT_Tester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
- Test/IR_Manipulation_Tester/IR_Manipulation_Tester/: main.cpp
- Test/IR_Manipulation_Tester/IR_Manipulation_Tester.xcodeproj/: project.pbxproj
- Test/IR_Manipulation_Tester/IR_Manipulation_Tester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
- Test/Peak_Tester/Peak_Tester/: main.cpp
- Test/Peak_Tester/Peak_Tester.xcodeproj/: project.pbxproj
- Test/SIMD_Tester/SIMD_Tester/: main.cpp  simd_test.cpp
- Test/SIMD_Tester/SIMD_Tester.xcodeproj/: project.pbxproj
- Test/Window_Tester/Window_Tester/: main.cpp
- Test/Window_Tester/Window_Tester.xcodeproj/: project.pbxproj
AudioFile/: AIFCCompression.hpp  AudioFileExtendedDouble.hpp  AudioFileFormat.hpp  AudioFileUtilities.hpp  BaseAudioFile.h  BaseAudioFile.hpp  IAudioFile.cpp  IAudioFile.h  IAudioFile.hpp  OAudioFile.cpp  OAudioFile.h  OAudioFile.hpp
HIRT_Multichannel_Convolution/: AH_VectorOps.h  ConvolveErrors.h  ConvolveMono.hpp  ConvolveMultichannel.hpp  ConvolveNToMono.hpp  ConvolvePartitioned.hpp  ConvolveSIMD.h  ConvolveTimeDomain.hpp  ConvolveUtilities.hpp  Convolver.cpp  Convolver.h  Convolver.hpp  MemorySwap.h  MonoConvolve.cpp  MonoConvolve.h  MonoConvolve.hpp  NToMonoConvolve.cpp  NToMonoConvolve.h  NToMonoConvolve.hpp  PartitionedConvolve.cpp  PartitionedConvolve.h  PartitionedConvolve.hpp  TimeDomainConvolve.cpp  TimeDomainConvolve.h  TimeDomainConvolve.hpp  convolve_errors.h
HISSTools_FFT/: HISSTools_FFT.cpp  HISSTools_FFT.h  HISSTools_FFT.hpp  HISSTools_FFT_Core.h  HISSTools_FFT_Core.hpp  HISSTools_FFT_Types.hpp
HISSTools_FFT/Documentation/html/: _h_i_s_s_tools___f_f_t_8h.html  _h_i_s_s_tools___f_f_t_8h.js  _h_i_s_s_tools___f_f_t_8h_source.html  _h_i_s_s_tools___f_f_t___core_8h_source.html  annotated.html  annotated_dup.js  classes.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_double_setup-members.html  struct_double_setup.html  struct_double_split-members.html  struct_double_split.html  struct_float_setup-members.html  struct_float_setup.html  struct_float_split-members.html  struct_float_split.html  struct_split-members.html  struct_split.html
HISSTools_FFT/Documentation/latex/: _h_i_s_s_tools___f_f_t_8h.tex  annotated.tex  files.tex  hierarchy.tex  refman.tex  struct_double_setup.tex  struct_double_split.tex  struct_float_setup.tex  struct_float_split.tex  struct_split.tex
HISSTools_FFT/FFT Tester/FFT Tester/: main.cpp
HISSTools_FFT/FFT Tester/FFT Tester.xcodeproj/: project.pbxproj
HISSTools_IR_Manipulation/: HISSTools_IR_Manipulation.cpp  HISSTools_IR_Manipulation.h
HISSTools_Windows/: WindowFunctions.hpp
cmake/: hisstoolsConfig.cmake.in
include/: KernelSmoother.hpp  MemorySwap.hpp  Resampler.hpp  SpectralProcessor.hpp  allocator.hpp  interpolation.hpp  kernel_smoother.hpp  memory_swap.hpp  namespace.hpp  partial_tracker.hpp  random_generator.hpp  resampler.hpp  simd_support.hpp  spectral_functions.hpp  spectral_processor.hpp  statistics.hpp  table_reader.hpp  thread_locks.hpp  window.hpp  window_functions.hpp
include/AudioFile/: AudioFileUtilities.hpp  BaseAudioFile.hpp  IAudioFile.hpp  OAudioFile.hpp  aifc_compression.hpp  extended_double.hpp  out_file.hpp
include/HIRT_Multichannel_Convolution/: ConvolveMono.hpp  ConvolveMultichannel.hpp  ConvolveNToMono.hpp  ConvolvePartitioned.hpp  ConvolveTimeDomain.hpp  ConvolveUtilities.hpp  mono.hpp  multichannel.hpp  n_to_mono.hpp  partitioned.hpp  time_domain.hpp
include/HISSTools_FFT/: HISSTools_FFT.hpp  fft.hpp
include/audio_file/: aifc_compression.hpp  base.hpp  extended_double.hpp  format.hpp  in_file.hpp  out_file.hpp  utilities.hpp
include/convolution/: mono.hpp  multichannel.hpp  n_to_mono.hpp  partitioned.hpp  time_domain.hpp  utilities.hpp
include/fft/: fft.hpp  fft_core.hpp  fft_types.hpp
test/: audio_file_test.cpp  cmake_system_test.cpp  convolution_test.cpp  fft_test.cpp  ir_manipulation_test.cpp  peak_test.cpp  simd_test.cpp  window_test.cpp
test/test_utils/: tabbed_out.hpp  timer.hpp
(+14 files in other folders)
